attemp to fix offset issue on mobile

--- a/src/components/SidewaysSelector/SidewaysSelector.module.scss
+++ b/src/components/SidewaysSelector/SidewaysSelector.module.scss
@@ -36,6 +36,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  overflow-x: hidden;
 
   & > button {
     width: 3rem;
